--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Upload to Google Drive
-        env:
-          GOOGLE_DRIVE_CREDENTIALS: ${{ secrets.GOOGLE_DRIVE_CREDENTIALS }}
-          FOLDER_ID: ${{ secrets.GOOGLE_DRIVE_FOLDER_ID }}
+        uses: sburnett/gdrive-upload-action@v1
+        with:
+          serviceAccountJson: ${{ secrets.GOOGLE_DRIVE_CREDENTIALS }}
+          folderId: ${{ secrets.GOOGLE_DRIVE_FOLDER_ID }}
+          filePath: ./Certificates/*
