--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,17 +3,25 @@ name: Upload to Google Drive
 on:
   push:
     branches:
-      - main  # Change this to your default branch name if different
+      - main # Change this to your default branch name if different
 
 jobs:
   upload:
     runs-on: ubuntu-latest
+    permissions:
+      contents: 'read'
+      id-token: 'write'
     steps:
       - uses: actions/checkout@v3
 
-      - name: Upload to Google Drive
-        uses: sburnett/gdrive-upload-action@v1
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v1'
         with:
-          serviceAccountJson: ${{ secrets.GOOGLE_DRIVE_CREDENTIALS }}
-          folderId: ${{ secrets.GOOGLE_DRIVE_FOLDER_ID }}
-          filePath: ./Certificates/*
+          credentials_json: '${{ secrets.GOOGLE_DRIVE_CREDENTIALS }}'
+
+      - name: Upload to Google Drive
+        uses: 'google-github-actions/upload-cloud-storage@v1'
+        with:
+          path: './*'  # Adjust this path to match your build output directory
+          destination: '1mS9YKj3iEeTVNEWnGRnf8VMkmO4pTGQc'
+          parent: false
